SDL_image works, can now render sprites from a spritesheet.

--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -27,6 +27,11 @@
           "name": "SDL2_DIR",
           "value": "F:/SDL2/vs/sdl",
           "type": "PATH"
+        },
+        {
+          "name": "SDL2_image_DIR",
+          "value": "F:/SDL2/vs/sdl",
+          "type": "PATH"
         }
       ]
     }
