Got basic mechanics of Orbs working (used to be Stars)

--- a/assets.yml
+++ b/assets.yml
@@ -14,3 +14,8 @@ assets.cpp:
     name: asset_level_2
     empty_tile: 255
     output_struct: true
+
+  assets/level3.tmx:
+    name: asset_level_3
+    empty_tile: 255
+    output_struct: true
