--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,26 +27,26 @@ jobs:
           - os: ubuntu-20.04
             name: Linux
             release-suffix: LIN64
-            cmake-args: 
+            cmake-args: -DSDL2_image_DIR=$GITHUB_WORKSPACE/main/SDL2
             apt-packages: libsdl2-dev libsdl2-image-dev python3-setuptools
 
           - os: ubuntu-20.04
             name: Emscripten
             release-suffix: WEB
-            cmake-args: 
+            cmake-args: -DSDL2_image_DIR=$GITHUB_WORKSPACE/main/SDL2
             cmake-prefix: emcmake
             apt-packages: python3-setuptools
 
           - os: macos-latest
             name: macOS
             release-suffix: MACOS
-            cmake-args: 
+            cmake-args: -DSDL2_image_DIR=$GITHUB_WORKSPACE/main/SDL2
             brew-packages: sdl2 sdl2_image
 
           - os: windows-latest
             name: Visual Studio
             release-suffix: WIN64
-            cmake-args: 
+            cmake-args: -DSDL2_image_DIR=$GITHUB_WORKSPACE/main/SDL2
 
     runs-on: ${{matrix.os}}
 
