--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,8 +39,7 @@ if(EMSCRIPTEN)
 
 	set_target_properties(${PROJECT_NAME} PROPERTIES
 		SUFFIX ".html"
-		LINK_FLAGS "-s ENVIRONMENT=web -s SDL2_IMAGE_FORMATS=['png'] --shell-file ${EMSCRIPTEN_SHELL} -s 'EXTRA_EXPORTED_RUNTIME_METHODS=[\"addRunDependency\", \"removeRunDependency\"]'"
-		LINK_DEPENDS ${EMSCRIPTEN_SHELL}
+		LINK_FLAGS "-s ENVIRONMENT=web -s SDL2_IMAGE_FORMATS=['png']"
 	)
 
 	install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.js ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.wasm
@@ -70,7 +69,9 @@ install(TARGETS ${PROJECT_NAME}
 	BUNDLE DESTINATION bin
 )
 
-install(FILES ${PROJECT_DISTRIBS} DESTINATION .)
+install(FILES ${PROJECT_DISTRIBS}
+	DESTINATION .
+)
 install(DIRECTORY ${PROJECT_ASSETS}
     DESTINATION .
     FILES_MATCHING
