--- a/Assets.yml
+++ b/Assets.yml
@@ -29,3 +29,13 @@ Assets.cpp:
     name: asset_level_5
     empty_tile: 255
     output_struct: true
+    
+  assets/level6.tmx:
+    name: asset_level_6
+    empty_tile: 255
+    output_struct: true
+    
+  assets/level7.tmx:
+    name: asset_level_7
+    empty_tile: 255
+    output_struct: true
