Trying to fix MacOS issues.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,14 @@ if (EXISTS SDL2_DIR)
 	message("Using existing SDL2_DIR: ${SDL2_DIR}")
 else()
 	set(SDL2_DIR ${CMAKE_CURRENT_SOURCE_DIR}/SDL2)
+	message("Using existing SDL2_DIR: ${SDL2_DIR}")
 endif()
 
 if (EXISTS SDL2_IMAGE_DIR)
 	message("Using existing SDL2_IMAGE_DIR: ${SDL2_IMAGE_DIR}")
 else()
 	set(SDL2_IMAGE_DIR ${SDL2_DIR})
+	message("Using SDL2_IMAGE_DIR: ${SDL2_IMAGE_DIR}")
 endif()
 
 # Add your sources here (adding headers is optional, but helps some CMake generators)
@@ -59,7 +61,7 @@ if(EMSCRIPTEN)
 	)
 else()
 	find_package(SDL2 REQUIRED)
-	find_package(SDL2_image REQUIRED)
+	find_package(SDL2_IMAGE REQUIRED)
 
 	target_include_directories(${PROJECT_NAME} PRIVATE ${SDL2_INCLUDE_DIR} ${SDL2_IMAGE_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
 endif()
