--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -22,13 +22,7 @@
       "buildCommandArgs": "",
       "ctestCommandArgs": "",
       "inheritEnvironments": [ "msvc_x64_x64" ],
-      "variables": [
-        {
-          "name": "SDL2_DIR",
-          "value": "C:/Users/capta_fjj2zz9/OneDrive/Development/Projects/A-Pair-Of-Squares/SDL2",
-          "type": "PATH"
-        }
-      ]
+      "variables": []
     }
   ]
 }
