--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,14 +27,14 @@ jobs:
           - os: ubuntu-20.04
             name: Linux
             release-suffix: LIN64
-            cmake-args: -DSDL2_image_DIR=$GITHUB_WORKSPACE/main/SDL2
+            cmake-args: #-DSDL2_IMAGE_DIR=$GITHUB_WORKSPACE/main/SDL2
             apt-packages: libsdl2-dev libsdl2-image-dev python3-setuptools
             can-fail: true
 
           - os: ubuntu-20.04
             name: Emscripten
             release-suffix: WEB
-            cmake-args: -DSDL2_image_DIR=$GITHUB_WORKSPACE/main/SDL2
+            cmake-args: #-DSDL2_IMAGE_DIR=$GITHUB_WORKSPACE/main/SDL2
             cmake-prefix: emcmake
             apt-packages: python3-setuptools
             can-fail: true
@@ -42,14 +42,14 @@ jobs:
           - os: macos-latest
             name: macOS
             release-suffix: MACOS
-            cmake-args: -DSDL2_image_DIR=$GITHUB_WORKSPACE/main/SDL2
+            cmake-args: #-DSDL2_IMAGE_DIR=$GITHUB_WORKSPACE/main/SDL2
             brew-packages: sdl2 sdl2_image
             can-fail: true
 
           - os: windows-latest
             name: Visual Studio
             release-suffix: WIN64
-            cmake-args: -DSDL2_DIR=$GITHUB_WORKSPACE/main/SDL2 -DSDL2_image_DIR=$GITHUB_WORKSPACE/main/SDL2
+            cmake-args: #-DSDL2_DIR=$GITHUB_WORKSPACE/main/SDL2 -DSDL2_image_DIR=$GITHUB_WORKSPACE/main/SDL2
             can-fail: true
 
 
