--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_minimum_required(VERSION 3.12)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# set(CMAKE_FIND_DEBUG_MODE TRUE)
+
 set(PROJECT_NAME APairOfSquares)
 
 project(${PROJECT_NAME})
@@ -50,6 +52,20 @@ install(DIRECTORY ${PROJECT_ASSETS}
     FILES_MATCHING
     PATTERN "*.png"
 )
+
+# Install dependencies
+set(DEP_SEARCH_DIRS ${CMAKE_CURRENT_BINARY_DIR}/SDL2 ${CMAKE_CURRENT_BINARY_DIR}/SDL2_image)
+file(GLOB SDL2_IMAGE_DEPS_DIRS ${CMAKE_CURRENT_BINARY_DIR}/SDL2_image/external/*)
+list(APPEND DEP_SEARCH_DIRS ${SDL2_IMAGE_DEPS_DIRS})
+
+file(GENERATE OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/fixup.cmake
+    CONTENT "
+        include(BundleUtilities)
+        fixup_bundle(\"\${CMAKE_INSTALL_PREFIX}/bin/$<TARGET_FILE_NAME:${PROJECT_NAME}>\" \"\" \"${DEP_SEARCH_DIRS}\")
+    "
+)
+
+install(SCRIPT ${CMAKE_CURRENT_BINARY_DIR}/fixup.cmake)
 
 set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY OFF)
 set(CPACK_GENERATOR "ZIP" "TGZ")
