--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.12)
+cmake_minimum_required(VERSION 3.14)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -18,6 +18,14 @@ set(PROJECT_ASSETS assets)
 
 set(ASSET_OUTPUTS "Assets.hpp" "Assets.cpp")
 set(ASSET_DEPENDS "Assets.yml")
+#[[
+set(DEP_SEARCH_DIRS
+    ${CMAKE_CURRENT_BINARY_DIR}/SDL2
+    ${CMAKE_CURRENT_BINARY_DIR}/SDL2/Release
+    ${CMAKE_CURRENT_BINARY_DIR}/SDL2_image
+    ${CMAKE_CURRENT_BINARY_DIR}/SDL2_image/Release
+)]]
+
 
 add_executable(${PROJECT_NAME} ${PROJECT_SOURCE})
 
@@ -53,7 +61,14 @@ install(DIRECTORY ${PROJECT_ASSETS}
     PATTERN "*.png"
 )
 
+if (UNIX)
+    install(FILES APoS_Launcher_Linux.sh
+	    DESTINATION .
+    )
+endif()
+
 # Install dependencies
+#[[
 set(DEP_SEARCH_DIRS ${CMAKE_CURRENT_BINARY_DIR}/SDL2 ${CMAKE_CURRENT_BINARY_DIR}/SDL2_image)
 file(GLOB SDL2_IMAGE_DEPS_DIRS ${CMAKE_CURRENT_BINARY_DIR}/SDL2_image/external/*)
 list(APPEND DEP_SEARCH_DIRS ${SDL2_IMAGE_DEPS_DIRS})
@@ -66,6 +81,23 @@ file(GENERATE OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/fixup.cmake
 )
 
 install(SCRIPT ${CMAKE_CURRENT_BINARY_DIR}/fixup.cmake)
+]]
+
+# Install dependencies
+set(DEP_SEARCH_DIRS)
+# We built these, so we're installing them
+if(TARGET SDL2)
+    list(APPEND DEP_SEARCH_DIRS $<TARGET_FILE_DIR:SDL2>)
+endif()
+
+if(TARGET SDL2_image)
+    list(APPEND DEP_SEARCH_DIRS $<TARGET_FILE_DIR:SDL2_image> $<TARGET_FILE_DIR:png> $<TARGET_FILE_DIR:zlib>)
+endif()
+
+install(CODE "
+    include(BundleUtilities)
+    fixup_bundle(\"\${CMAKE_INSTALL_PREFIX}/bin/$<TARGET_FILE_NAME:${PROJECT_NAME}>\" \"\" \"${DEP_SEARCH_DIRS}\")
+")
 
 set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY OFF)
 set(CPACK_GENERATOR "ZIP" "TGZ")
