Added glob option for fetching source files. Not recommended by CMake.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,11 @@ cmake_minimum_required(VERSION 3.14)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+# Uncomment these to put the dlls in the same directory as the executable (useful if you don't have SDL2 installed and you're building from source)
+# set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
+
+# Uncomment if you need to do some debugging :)
 # set(CMAKE_FIND_DEBUG_MODE TRUE)
 
 set(PROJECT_NAME APairOfSquares)
@@ -10,7 +15,11 @@ set(PROJECT_NAME APairOfSquares)
 project(${PROJECT_NAME})
 
 # Add your sources here (adding headers is optional, but helps some CMake generators)
-set(PROJECT_SOURCE "APairOfSquares.cpp" "Square.cpp" "Entity.cpp" "Spritesheet.cpp" "InputManager.cpp" "Assets.cpp" "LevelManager.cpp" "Player.cpp" "ParticleManager.cpp" "TimerManager.cpp" "Bezier.cpp" "TextManager.cpp" "Game.cpp" "Utilities.cpp" "AudioManager.cpp" "Orb.cpp" "Spike.cpp" "Colour.cpp" "Constants.cpp" "Spring.cpp" "TransitionManager.cpp" "Button.cpp" "Door.cpp")
+set(PROJECT_SOURCES "APairOfSquares.cpp" "Square.cpp" "Entity.cpp" "Spritesheet.cpp" "InputManager.cpp" "Assets.cpp" "LevelManager.cpp" "Player.cpp" "ParticleManager.cpp" "TimerManager.cpp" "Bezier.cpp" "TextManager.cpp" "Game.cpp" "Utilities.cpp" "AudioManager.cpp" "Orb.cpp" "Spike.cpp" "Colour.cpp" "Constants.cpp" "Spring.cpp" "TransitionManager.cpp" "Button.cpp" "Door.cpp")
+
+# Or let GLOB find all the .cpp files in the current directory... (CMake won't detect when files are added)
+#file(GLOB PROJECT_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "*.cpp")
+#list(APPEND PROJECT_SOURCES "Assets.cpp")
 
 # ... and any other files you want in the release here
 set(PROJECT_DISTRIBS LICENSE README.md)
@@ -19,7 +28,6 @@ set(PROJECT_ASSETS assets)
 set(ASSET_OUTPUTS "Assets.hpp" "Assets.cpp")
 set(ASSET_DEPENDS "Assets.yml")
 
-
 if(APPLE)
     # Need to put the asssets inside the bundle (this is where SDL_GetBasePath points to)
     set(ASSETS_DEST bin/$<TARGET_FILE_NAME:${PROJECT_NAME}>.app/Contents/Resources)
@@ -27,7 +35,7 @@ else()
     set(ASSETS_DEST .)
 endif()
 
-add_executable(${PROJECT_NAME} ${PROJECT_SOURCE})
+add_executable(${PROJECT_NAME} MACOSX_BUNDLE ${PROJECT_SOURCES})
 
 find_package(PythonInterp 3.6 REQUIRED)
 
@@ -44,6 +52,7 @@ target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
 
 # Link
 target_link_libraries(${PROJECT_NAME} SDL2::SDL2main SDL2::SDL2 SDL2::image)
+
 
 # Setup release packages
 install(TARGETS ${PROJECT_NAME}
@@ -84,11 +93,11 @@ if (NOT EMSCRIPTEN)
         set(EXE_SUFFIX ".app")
     endif()
 
-
     install(CODE "
         include(BundleUtilities)
         fixup_bundle(\"\${CMAKE_INSTALL_PREFIX}/bin/$<TARGET_FILE_NAME:${PROJECT_NAME}>${EXE_SUFFIX}\" \"\" \"${DEP_SEARCH_DIRS}\")
     ")
+
 endif()
 
 set(CPACK_INCLUDE_TOPLEVEL_DIRECTORY OFF)
