--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -125,16 +125,16 @@ jobs:
       run: |
         cmake --build . --config $BUILD_TYPE -j 2
 
-    # Generate tar/zip files of the build
+    # When it's a release, generate tar/zip files of the build
     - name: Package Release
-      if: matrix.release-suffix != ''
+      if: github.event_name == 'release' && matrix.release-suffix != ''
       shell: bash
       working-directory: ${{runner.workspace}}/main/build
       run: |
         cmake --build . --config $BUILD_TYPE --target package
 
     # Push the tar file to the release
-    - name: Upload tar
+    - name: Upload tar for release
       if: github.event_name == 'release' && matrix.release-suffix != ''
       uses: actions/upload-release-asset@v1
       env:
@@ -146,7 +146,7 @@ jobs:
         asset_content_type: application/octet-stream
 
     # Push the zip file to the release
-    - name: Upload zip
+    - name: Upload zip for release
       if: github.event_name == 'release' && matrix.release-suffix != ''
       uses: actions/upload-release-asset@v1
       env:
@@ -157,7 +157,15 @@ jobs:
         asset_name: ${{env.RELEASE_FILE}}.zip
         asset_content_type: application/zip
         
-       # When not a release, create an artifact
+    # When it's not a release, generate tar/zip files of the build
+    - name: Package artifact
+      if: github.event_name != 'release'
+      shell: bash
+      working-directory: ${{runner.workspace}}/main/build
+      run: |
+        cmake --build . --config $BUILD_TYPE --target package
+        
+    # When not a release, create an artifact
     - name: Upload zip to artifacts
       if: github.event_name != 'release'
       uses: actions/upload-artifact@v2
