No console for windows.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,9 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 # Uncomment if you need to do some debugging :)
 # set(CMAKE_FIND_DEBUG_MODE TRUE)
 
+# Comment out if you want the console window (on Windows)
+set(NO_CONSOLE)
+
 set(PROJECT_NAME APairOfSquares)
 
 project(${PROJECT_NAME})
@@ -37,7 +40,11 @@ else()
     set(ASSETS_DEST .)
 endif()
 
-add_executable(${PROJECT_NAME} MACOSX_BUNDLE ${PROJECT_SOURCES})
+if (NO_CONSOLE)
+    add_executable(${PROJECT_NAME} MACOSX_BUNDLE WIN32 ${PROJECT_SOURCES})
+else()
+    add_executable(${PROJECT_NAME} MACOSX_BUNDLE ${PROJECT_SOURCES})
+endif()
 
 find_package(PythonInterp 3.6 REQUIRED)
 
