--- a/Assets.yml
+++ b/Assets.yml
@@ -29,13 +29,33 @@ Assets.cpp:
     name: asset_level_5
     empty_tile: 255
     output_struct: true
-    
+
   assets/level6.tmx:
     name: asset_level_6
     empty_tile: 255
     output_struct: true
-    
+
   assets/level7.tmx:
     name: asset_level_7
+    empty_tile: 255
+    output_struct: true
+
+  assets/level8.tmx:
+    name: asset_level_8
+    empty_tile: 255
+    output_struct: true
+
+  assets/level9.tmx:
+    name: asset_level_9
+    empty_tile: 255
+    output_struct: true
+
+  assets/level10.tmx:
+    name: asset_level_10
+    empty_tile: 255
+    output_struct: true
+
+  assets/level11.tmx:
+    name: asset_level_11
     empty_tile: 255
     output_struct: true
